# ryu-render

./: CMakeLists.txt  LICENSE
include/: glenv.h  global.h  shader.h  shader_program.h  singleton.h
res/shader/: default.vert  purecolor.frag
src/: main.cpp  shader.cpp  shader_program.cpp
